# scitex-etc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.claude/: CLAUDE.md
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  install-test.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-etc-quality-audit-on-ubuntu-latest.yml  test.yml
docs/sphinx/: conf.py  index.rst  installation.rst
docs/sphinx/api/: wait_key.rst
examples/: quickstart.py
src/scitex_etc/: __init__.py  _grid.py  _search.py  wait_key.py
src/scitex_etc/_skills/: SKILL.md  keyboard.md  wait-key.md
src/scitex_etc/_skills/scitex-etc/: 01_installation.md  01_quick-start.md  02_python-api.md  02_quick-start.md  03_python-api.md  10_quick-start.md  11_python-api.md  SKILL.md
src/scitex_etc/_skills/scitex-etc-media/: 01_render-detect-classify-show.md  02_cli-and-mcp.md  SKILL.md
src/scitex_etc/_sphinx_html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_etc/_sphinx_html/.doctrees/: environment.pickle  index.doctree  installation.doctree
src/scitex_etc/_sphinx_html/.doctrees/__intersphinx_cache__/: python_objects.inv
src/scitex_etc/_sphinx_html/.doctrees/api/: wait_key.doctree
src/scitex_etc/_sphinx_html/_modules/: index.html
src/scitex_etc/_sphinx_html/_modules/scitex_etc/: wait_key.html
src/scitex_etc/_sphinx_html/api/: wait_key.html
src/scitex_etc/media/: __init__.py
src/scitex_etc/media/render/: __init__.py  __main__.py  _classify.py  _detect.py  _show.py  _targets.py  mcp_server.py
tests/: conftest.py  test_wait_key.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_cross_package_imports.py  test_examples.py  test_skills_quality.py
tests/scitex_etc/: test__grid.py  test__search.py  test_wait_key.py
tests/scitex_etc/media/render/: test___main__.py  test__detect.py  test__targets.py  test_classify.py  test_mcp_server.py  test_show.py
