[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-etc"
version = "0.1.0"
description = "Interactive keyboard input utilities (wait_key, count)"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe" },
]
dependencies = [
    "readchar",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-etc"
Repository = "https://github.com/ywatanabe1989/scitex-etc"
Issues = "https://github.com/ywatanabe1989/scitex-etc/issues"

[project.entry-points."scitex_dev.docs"]
scitex-etc = "scitex_etc"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_etc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
