[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-etc"
version = "0.1.1"
description = "Interactive keyboard input utilities (wait_key, count)"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tomli; python_version<\"3.11\"",
    "readchar",
]

[project.optional-dependencies]
dev = [
    "scitex-dev",
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-etc[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-etc"
Repository = "https://github.com/ywatanabe1989/scitex-etc"
Issues = "https://github.com/ywatanabe1989/scitex-etc/issues"

[project.entry-points."scitex_dev.docs"]
scitex-etc = "scitex_etc"

[project.entry-points."scitex_dev.skills"]
scitex-etc = "scitex_etc"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_etc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]
