[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-etc"
version = "0.2.1"
description = "Small cross-cutting utilities: interactive keyboard input (wait_key, count), parameter-grid iteration (count_grids, yield_grids), regex string search (search), and media handling (detect/classify/show)"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "tomli; python_version<\"3.11\"",
    "readchar",
]

[project.optional-dependencies]
dev = [
    "scitex-dev>=0.11.7",
    "pytest",
    "pytest-cov",
    "ruff",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-etc[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-etc"
Repository = "https://github.com/ywatanabe1989/scitex-etc"
Issues = "https://github.com/ywatanabe1989/scitex-etc/issues"
Documentation = "https://scitex-etc.readthedocs.io"

[project.entry-points."scitex_dev.docs"]
scitex-etc = "scitex_etc"

[project.entry-points."scitex_dev.skills"]
scitex-etc = "scitex_etc"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_etc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
parallel = true
source = ["scitex_etc"]
concurrency = ["multiprocessing", "thread"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]

[tool.scitex_dev.audit]
# PS-168 — Per-package secret + env-var prefix in GitHub Actions workflows.
# `GH_PERSONAL_ACCESS_TOKEN` is the ecosystem-wide cross-cutting PAT used
# by the contributor-assistant CLA action. The natural GITHUB_* namespace
# is reserved by GitHub Actions on the secret-name surface (HTTP 422 on
# every `gh secret set`), so the GH_ shorthand is the canonical
# substitute and is registered ecosystem-wide via PR #122 on scitex-dev
# (EXCEPTION_SECRETS_DEFAULT). This per-package entry pins the same
# exception inline so the audit passes on every scitex-dev version,
# independent of release timing.
ps168_secret_exceptions = ["GH_PERSONAL_ACCESS_TOKEN"]
